infra/k8s/keymaster-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keymaster
  labels:
    app: keymaster
spec:
  replicas: 3
  selector:
    matchLabels:
      app: keymaster
  template:
    metadata:
      labels:
        app: keymaster
    spec:
      containers:
      - name: keymaster
        image: tetracube/keymaster:latest
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "200m"
